# preference-routing

./: .gitignore  .travis.yml  Cargo.toml  Jenkinsfile  README.md  config.toml  runtime-analysis  sonar-project.properties
src/: dijkstra.rs  graph.rs  main.rs  testGraph  tests.rs
src/config/: mod.rs
src/dijkstra/: mod.rs  state.rs
src/graph/: edge.rs  mod.rs  node.rs  path.rs
src/graph/dijkstra/: mod.rs  state.rs
src/helpers/: mod.rs
src/lp/: mod.rs
src/server/: auth.rs  mod.rs  routing.rs  user.rs
src/test/: mod.rs
src/test_graphs/: concTestGraph  testGraph
src/tests/: mod.rs  parsing.rs  routing.rs
src/tests/graph_files/: offset_test_graph  validGraph
src/tests/graphs/: concatTestGraph  testGraph
src/user/: mod.rs
