[package]
name = "preference-routing"
version = "0.1.0"
authors = ["Patrick Singer"]
edition = "2018"

[dependencies]
ordered-float = "1.0.2"
actix-web = "1.0"
actix-cors = "0.1.0"
futures = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
lp-modeler = "0.3.0"
sha3 = "0.8.2"
toml = "0.5.3"